--- a/style.less
+++ b/style.less
@@ -9,7 +9,7 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700);
 
 // Basic Colors
-@main-bg: #fff; 
+@main-bg: #fff;
 @main-color: #285c6a;
 
 // content
@@ -20,9 +20,9 @@
 @coluna1: 20%;
 @coluna2: 20%;
 
-// header 
+// header
 @header: #464646;
-@header-link: #ccc; 
+@header-link: #ccc;
 @header-text: #ccc;
 
 // navegacao
@@ -91,13 +91,13 @@
 /********** Basic styles **********/
 body {
 	background: @main-bg url(img/background.jpg) no-repeat top center fixed;
-	color: @main-text; 
+	color: @main-text;
 	font-family: @main-font;
 	margin: 0;
 }
 a:link,
-a:visited, 
-#content a:link, 
+a:visited,
+#content a:link,
 dl.portlet a:link {
 	color:@main-link;
 	border-bottom: none;
@@ -111,7 +111,7 @@ a:hover {
 
 #content a:hover,
 dl.portlet a:hover {
-    color: @secondary-link !important; 
+    color: @secondary-link !important;
 }
 
 .clear {
@@ -348,7 +348,7 @@ h2 {
 	margin-bottom: 0.5em;
 }
 #content .documentDescription, #content #description {
-    color: lighten(@main-text, 10%); 
+    color: lighten(@main-text, 10%);
     font-weight: normal;
     margin-bottom: 1em;
 }
@@ -401,8 +401,8 @@ dl.portlet dt.portletHeader a {
 }
 
 /* lists inside columns */
-aside dl, 
-aside dd, 
+aside dl,
+aside dd,
 aside ul {
 	padding: 0;
 	margin: 0;
@@ -474,9 +474,9 @@ footer p {
 /* Portrait tablet to landscape and desktop */
 @media (min-width: 768px) and (max-width: 979px) {
 
-  
+
 }
- 
+
 /* Landscape phone to portrait tablet */
 @media (max-width: 767px) {
 	body {
@@ -486,7 +486,7 @@ footer p {
 		width: 90%;
 	}
 	#main {
-		margin-top: 4em; 
+		margin-top: 4em;
 		display: block;
 	}
 	div.cell {
@@ -495,7 +495,7 @@ footer p {
 		width: 100% !important;
 		margin-left: -100% !important;
 	}
-	#logo { 
+	#logo {
 		float: right;
 	}
 	#portal-breadcrumbs {
@@ -557,7 +557,7 @@ footer p {
 	    width: 100%;
 	}
 }
- 
+
 /* Landscape phones and down */
 @media (max-width: 480px) {
 	#logo {
@@ -572,4 +572,14 @@ footer p {
 		padding-left: 2em;
 		padding-right: 2em;
 	}
+}
+
+/* Reposition Live Search Box */
+.LSBox{
+    position: relative;
+}
+
+#LSResult {
+    z-index: 100;
+    margin: inherit;
 }
