2015-02-18  Michael Guravage  <guravage@weddell.itf.cwi.nl>
	* style.css (object.viewembededfile): Resize embedded pdf viewer I
	just added to the file_view page template.

--- a/style.css
+++ b/style.css
@@ -558,7 +558,7 @@ footer p {
     padding-right: 2em;
   }
 }
-/* Reposition Live Search box */
+/* Reposition Live Search Box */
 .LSBox {
   position: relative;
 }
@@ -566,3 +566,9 @@ footer p {
   z-index: 100;
   margin: inherit;
 }
+/* Resize embedded PDF viewer */
+object.viewembededfile {
+  height: 1200px;
+  width: 100%;
+}
+/* finis */
