--- a/style.less
+++ b/style.less
@@ -583,3 +583,11 @@ footer p {
     z-index: 100;
     margin: inherit;
 }
+
+/* Resize embedded PDF viewer */
+object.viewembededfile {
+    height:1200px;
+    width: 100%;
+}
+
+/* finis */
