2015-02-18  Michael Guravage  <guravage@weddell.itf.cwi.nl>
	* style.css (object.viewembededfile): Resize embedded pdf viewer I
	just added to the file_view page template.

--- a/style.css
+++ b/style.css
@@ -566,6 +566,13 @@ footer p {
   z-index: 100;
   margin: inherit;
 }
+/* Obviate webcouturier.dropdownmenu */
 div#btnav * .submenu {
   display: none;
 }
+/* Resize embedded PDF viewer */
+object.viewembededfile {
+  height: 1200px;
+  width: 100%;
+}
+/* finis */
