--- a/style.less
+++ b/style.less
@@ -584,6 +584,15 @@ footer p {
     margin: inherit;
 }
 
+/* Obviate webcouturier.dropdownmenu */
 div#btnav * .submenu {
     display: none;
 }
+
+/* Resize embedded PDF viewer */
+object.viewembededfile {
+    height:1200px;
+    width: 100%;
+}
+
+/* finis */
