2015-02-24  Michael Guravage  <guravage@weddell.itf.cwi.nl>
	* style.less: Remove recent customizations

	* style.css: Remove recent customizations

	* style-cwi.less: Move recent customizations into a separate file.

	* style-cwi.css: New.

	* index.html: Use new style-cwi.css file.

--- a/style-cwi.css
+++ b/style-cwi.css
@@ -558,3 +558,17 @@ footer p {
     padding-right: 2em;
   }
 }
+/* Reposition Live Search Box */
+.LSBox {
+  position: relative;
+}
+#LSResult {
+  z-index: 100;
+  margin: inherit;
+}
+/* Resize embedded PDF viewer */
+object.viewembededfile {
+  height: 1200px;
+  width: 100%;
+}
+/* finis */
